@@ -792,7 +792,6 @@ h_epsi_her_set.o : buffers.o
 h_epsi_her_set.o : ldaU.o
 h_epsi_her_set.o : pwcom.o
 h_epsi_her_set.o : scf_mod.o
-h_psi.o : ../../FFTXlib/fft_helper_subroutines.o
 h_psi.o : ../../Modules/becmod.o
 h_psi.o : ../../Modules/control_flags.o
 h_psi.o : ../../Modules/fft_base.o
@@ -1562,7 +1561,6 @@ pw_restart_new.o : esm.o
 pw_restart_new.o : extfield.o
 pw_restart_new.o : exx.o
 pw_restart_new.o : exx_base.o
-pw_restart_new.o : io_rho_xml.o
 pw_restart_new.o : ldaU.o
 pw_restart_new.o : martyna_tuckerman.o
 pw_restart_new.o : pwcom.o
